<resources>
    <string name="app_name">Flow Core</string>
    <string name="next">Next</string>
    <string name="username">Username</string>
    <string name="username_too_short">Too short</string>
    <string name="username_too_long">Too long</string>
    <string name="username_format_error">The user name can only contain alphanumeric and.</string>
    <string name="username_exist">It’s taken</string>
    <string name="username_success">Sounds good</string>
    <string name="register_error">Register error</string>
    <string name="confirm">Confirm</string>
    <string name="almost_there">Almost there</string>
    <string name="create_password">Create Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_password_again">Please enter your password again</string>
    <string name="password_check">I understand Flow Core can not recover this password.</string>
    <string name="cloud_password_tip">Flow Core uses this password to encrypt your backup.</string>
    <string name="password">Password</string>
    <string name="password_verify_format">Enter at least 8 characters</string>
    <string name="password_verify_no_number">At least 1 character</string>
    <string name="please_create">Create \nPassword</string>
    <string name="backing_up">Backing up</string>
    <string name="backup_error">Backup error</string>
    <string name="backup">Backup</string>
    <string name="manual">Manual</string>
    <string name="double_str">Double</string>
    <string name="secure">Secure</string>
    <string name="manual_backup_tip">Unlock with PIN Code and Biometrics to allow extra wallet security.</string>
    <string name="pick_your">Pick Your</string>
    <string name="pin_code_title">Add Extra\nProtection To\nYour Wallet</string>
    <string name="protection">Protection</string>
    <string name="face_id">Face ID</string>
    <string name="pin_code">PIN Code</string>
    <string name="create_pin">Create a PIN</string>
    <string name="pin">PIN</string>
    <string name="check_pin">Please type\nyour PIN again</string>
    <string name="check_pin_tip">There’s no Restore PIN button. Please make sure you can remember your PIN.</string>
    <string name="secret_key_name" translatable="false">biometric_sample_encryption_key</string>
    <string name="create_pin_tip">So no one else but you can unlock your wallet.</string>
    <string name="mnemonic_question_title">Select the word %1$s</string>
    <string name="finish">Finish</string>
    <string name="create">Create</string>
    <string name="import_str">import</string>
    <string name="dont_have_account">Don’t have \nan account?</string>
    <string name="already_have_account">Already have \nan account?</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="profile">Profile</string>
    <string name="things_you">Things You \nNeed to Know</string>
    <string name="know">Know</string>
    <string name="wallet_create_warning_tip">In the next step, you will see a secret phrase (12 words). The secret phrase is the only key to recover your wallet.</string>
    <string name="create_wallet_warning1">If I lose my secret phrases, I cannot access my account forever.</string>
    <string name="create_wallet_warning2">If I expose my secret phrases anywhere, my funds can be stolen.</string>
    <string name="create_wallet_warning3">It is my full responsibility to secure my secret phrases.</string>
    <string name="backup_manually">Backup Manually</string>
    <string name="backup_to_google_drive">Backup to google drive</string>
    <string name="recovery_phrase">Recovery Phrase</string>
    <string name="phrase">Phrase</string>
    <string name="nft">NFT</string>
    <string name="restore_wallet">Restore Wallet</string>
    <string name="restore_wallet_tip">Restore your wallet with the 12 word recovery phrase that you have written down.</string>
    <string name="choose_account">Choose Account</string>
    <string name="multiple_accounts_found">Multiple Accounts found.</string>
    <string name="enter_password">Enter Password</string>
    <string name="continue_str">Continue</string>
    <string name="restore_with_google_drive">Restore with Google Drive</string>
    <string name="wrong_password">wrong password</string>
    <string name="word_not_found">Opps, word not found.</string>
    <string name="restore_mnemonic_tip">This is a 12 word phrase you were given when you created your previous wallet.</string>
    <string name="restore_with_mnemonic">Sign in with \nRecovery Phrase</string>
    <string name="restore_mnemonic_hint">Enter the Recovery Phrase</string>
    <string name="account_not_found">Account not Found</string>
    <string name="account_not_found_desc">No account found with the recovery phrase. Do you want to create a new account with your phrase?</string>
    <string name="your_phrase">your phrase</string>
    <string name="create_wallet">Create Wallet</string>
    <string name="cancel">Cancel</string>
    <string name="username_format_wrong">"Your username can only contain letters, numbers and '_'"</string>
    <string name="encrypt_backup">Encrypt Backup</string>
    <string name="done">Done</string>
    <string name="biometrics">Biometrics</string>
    <string name="legal_information">Legal \nInformation</string>
    <string name="legal">Legal</string>
    <string name="legal_tip">Please review the Privacy Policy and Terms of Service of Flow Core
        Wallet.</string>
    <string name="i_accept">I Accept</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="top_selection">Top Selection</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="purchase_price">Purchase Price</string>
    <string name="coins">Coins</string>
    <string name="collections">Collections</string>
    <string name="collections_count">%1$d Collections</string>
    <string name="collectibles_count">%1$d Collectibles</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="more">More</string>
    <string name="download">Download</string>
    <string name="saved_to_album">Saved to album</string>
    <string name="view_on_web">View on web</string>
    <string name="empty_title">We find nothing here.</string>
    <string name="nft_empty_desc">Looking forward to your new discovery.</string>
    <string name="get_new_nfts">Get new NFTs</string>
    <string name="receive">Receive</string>
    <string name="buy">Buy</string>
    <string name="swap">Swap</string>
    <string name="address">Address</string>
    <string name="wallets">Wallets</string>
    <string name="device">Device</string>
    <string name="chrome_extension">Chrome Extension</string>
    <string name="about">About</string>
    <string name="switch_account">Switch Account</string>
    <string name="logout">Logout</string>
    <string name="edit_avatar">Edit avatar</string>
    <string name="edit">Edit</string>
    <string name="settings_visible_desc">Other Flow Core users cannot search for your username
        .</string>
    <string name="visible">Visible</string>
    <string name="invisible">Invisible</string>
    <string name="private_str">Private</string>
    <string name="reset_pin_code">Reset PIN Code</string>
    <string name="private_key">Private Key</string>
    <string name="verify_pin_code">Verify PIN Code</string>
    <string name="enter_current_pin_code">Please enter current pin code</string>
    <string name="do_not_share_secret">Do not share your secret phrase!</string>
    <string name="do_not_share_secret_desc">If someone has your secret phrase, they will have full control of your wallet.</string>
    <string name="security">Security</string>
    <string name="manually">Manually</string>
    <string name="sync">Sync</string>
    <string name="delete">Delete</string>
    <string name="edit_nickname">Edit Nickname</string>
    <string name="nickname">Nickname</string>
    <string name="please_enter_a_nickname">Please enter a nickname</string>
    <string name="save">Save</string>
    <string name="address_book">Address Book</string>
    <string name="search">Search</string>
    <string name="address_add_name_tip">Please enter a name</string>
    <string name="address_add_address_tip">Please enter address</string>
    <string name="name">Name</string>
    <string name="add_address">Add address</string>
    <string name="checking">Checking</string>
    <string name="address_check_format_error">Invalid address</string>
    <string name="address_check_chain_error">"Can't find address in chain</string>
    <string name="address_check_success">Validated address</string>
    <string name="address_search_empty_tip">Sorry, We did not find any related account, please check your enter and search it again.</string>
    <string name="search_the_id">Search the ID: %1$s</string>
    <string name="send_to">Send to</string>
    <string name="send_search_hint">Username, address(0x), Find or Flowns</string>
    <string name="recent">Recent</string>
    <string name="my_accounts">My Accounts</string>
    <string name="my_wallet">My Wallet</string>
    <string name="transfer_amount">Transfer Amount</string>
    <string name="max">Max</string>
    <string name="restore_with_recovery_phrase">Restore with Recovery Phrase</string>
    <string name="stake_flow">Stake Flow</string>
    <string name="stake_guide_header1">Earn Rewards When You</string>
    <string name="stake_guide_header2">Stake Your Flow</string>
    <string name="lets_staking">Let\'s Staking</string>
    <string name="stake_guide_desc_1">Earn up to <font color='#60C293'><strong>13%</strong></font>
        per year.</string>
    <string name="stake_guide_desc_2">When you stake <font color='#60C293'><strong>Flow</strong></font> you receive <font color='#60C293'><strong>Flow</strong></font>. You can <font color='#60C293'><strong>trade</strong></font> this liquid asset at any time.</string>
    <string name="stake_guide_desc_3">You start earning <font color='#60C293'><strong>right away</strong></font>.</string>
    <string name="stake_guide_desc_4">Rewards are automatically credited to your deposit <font color='#60C293'><strong>every few days</strong></font>.</string>
    <string name="root_detected">Root Detected</string>
    <string name="root_detected_desc">Your keychain is exposing in threats.\nPlease make sure it’s your movement and improve the safety of your account.</string>
    <string name="things_you_need_to_know">Things you need to know</string>
    <string name="root_detect_warning1">Your keychain is exposing in threats.</string>
    <string name="root_detect_warning2">Your keychain will exposing in threats.</string>
    <string name="root_detect_warning3">Your keychain will exposing in threats.</string>
    <string name="i_understand">I understand</string>
    <string name="new_feature">New Feature</string>
    <string name="new_feature_desc">We have made the following updates to improve your experiences.</string>
    <string name="new_feature_title_1">Notification of Digital Assets</string>
    <string name="new_feature_desc_1">Lilico will notify you when your digital assets has moved.</string>
    <string name="new_feature_desc2">Now you can add multiple accounts in your lilico app, by switching account from the side menu or profile.</string>
    <string name="get_started">Get Started</string>
    <string name="notification_request_title">Turn On Push Notifications</string>
    <string name="notification_request_desc">Get notified when your transfers, swaps, and approvals complete.</string>
    <string name="turn_on_notifications">Turn On Notifications</string>
    <string name="maybe_later">Maybe Later</string>
</resources>