<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/bottom_navigation_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_24"
        android:title="@string/home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/bottom_navigation_nft"
        android:enabled="true"
        android:icon="@drawable/ic_nft_tab"
        android:title="@string/nft"
        app:showAsAction="always"/>

    <item
        android:id="@+id/bottom_navigation_explore"
        android:enabled="true"
        android:icon="@drawable/ic_explore"
        android:title="@string/explore"
        app:showAsAction="always"/>

    <item
        android:id="@+id/bottom_navigation_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:showAsAction="always"/>
</menu>