<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="18dp"
    android:paddingBottom="28dp">

    <TextView
        android:id="@+id/title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:fontFamily="@font/inter_semi_bold"
        android:text="@string/notification_request_title"
        android:textColor="@color/text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/desc_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal"
        android:text="@string/notification_request_desc"
        android:textColor="@color/text_sub"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_view"/>

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="18dp"
        android:src="@drawable/image_notification"
        app:layout_constraintBottom_toTopOf="@id/start_button"
        app:layout_constraintDimensionRatio="339:362"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desc_view"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/start_button"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_marginBottom="40dp"
        android:text="@string/turn_on_notifications"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="12dp"
        android:text="@string/maybe_later"
        app:layout_constraintTop_toBottomOf="@id/start_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>